#221 fixed text label wrapping for contract forms

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -426,7 +426,7 @@ Form overrides.
     width: 700px;
 }
 
-#contractForm p[id$=label] {
+#contractForm .zend_form .label {
     width: 250px;
 }
 
